[gd_scene load_steps=31 format=3 uid="uid://cjmkpeb4lfaf4"]

[ext_resource type="Script" path="res://scripts/screen_shake.gd" id="1_4v8we"]
[ext_resource type="PackedScene" uid="uid://cy57oxfnuh257" path="res://scenes/hand.tscn" id="1_5g20p"]
[ext_resource type="Script" path="res://scripts/base_level.gd" id="1_i3k5c"]
[ext_resource type="PackedScene" uid="uid://bd7b1sxnvl2mb" path="res://scenes/menus/pause_menu.tscn" id="2_5i0uf"]
[ext_resource type="FontFile" uid="uid://d4g1cp4nnnshb" path="res://assets/fonts/Test Font.ttf" id="5_wdl50"]
[ext_resource type="StyleBox" uid="uid://b3cr6s2av68ol" path="res://resources/UI/button_hover.tres" id="6_2f0ut"]
[ext_resource type="Texture2D" uid="uid://dd7ubahldr8dc" path="res://assets/UI/Button_map_hover.png" id="6_davks"]
[ext_resource type="Texture2D" uid="uid://dccasubd22oyh" path="res://assets/UI/Button_map_press.png" id="7_6g6gv"]
[ext_resource type="StyleBox" uid="uid://c036q7lldrr7h" path="res://resources/UI/button_pressed.tres" id="7_hdnrq"]
[ext_resource type="Texture2D" uid="uid://c4v3kbn71ql65" path="res://assets/UI/Button_map.png" id="8_2yaim"]
[ext_resource type="StyleBox" uid="uid://bineearsmv4jn" path="res://resources/UI/button_normal.tres" id="8_tcnxy"]
[ext_resource type="AudioStream" uid="uid://c1ytm5ibjt1tm" path="res://assets/sounds/music/mountain_layers/mountain_chords_synth.wav" id="9_k8yap"]
[ext_resource type="AudioStream" uid="uid://bot18q0drdlik" path="res://assets/sounds/music/mountain_layers/mountain_melody_synth.wav" id="10_w6u34"]
[ext_resource type="AudioStream" uid="uid://boc3b0dyrnm4c" path="res://assets/sounds/music/mountain_layers/mountain_melody_var_synth.wav" id="11_e8qec"]
[ext_resource type="AudioStream" uid="uid://b55jyhd6qojdj" path="res://assets/sounds/music/mountain_layers/mountain_melody_var_vocal.wav" id="12_ndra6"]
[ext_resource type="AudioStream" uid="uid://d3w6bg2xfnmqc" path="res://assets/sounds/music/mountain_layers/mountain_melody_vocal.wav" id="13_66pi5"]
[ext_resource type="AudioStream" uid="uid://bnlmaiv5i5jvj" path="res://assets/sounds/music/mountain_layers/mountain_percusion.wav" id="14_b8mkp"]
[ext_resource type="AudioStream" uid="uid://cw8x72ws0rqxk" path="res://assets/sounds/music/mountain_layers/mountain_sub.wav" id="15_asdmd"]

[sub_resource type="Animation" id="Animation_7mdp0"]
resource_name = "AppearDisappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(240, 100), Vector2(240, 160)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%StartLabel/../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_game"
}]
}

[sub_resource type="Animation" id="Animation_i2m1l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(240, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c823l"]
_data = {
"AppearDisappear": SubResource("Animation_7mdp0"),
"RESET": SubResource("Animation_i2m1l")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fq2vb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yh7nq"]

[sub_resource type="ImageTexture" id="ImageTexture_2ty43"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iw6md"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mu7fx"]
texture = ExtResource("6_davks")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wjsoj"]
texture = ExtResource("7_6g6gv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5gfpd"]
texture = ExtResource("8_2yaim")

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_mami6"]
stream_count = 7
stream_0/stream = ExtResource("9_k8yap")
stream_0/volume = 0.0
stream_1/stream = ExtResource("10_w6u34")
stream_1/volume = 0.0
stream_2/stream = ExtResource("11_e8qec")
stream_2/volume = 0.0
stream_3/stream = ExtResource("12_ndra6")
stream_3/volume = 0.0
stream_4/stream = ExtResource("13_66pi5")
stream_4/volume = 0.0
stream_5/stream = ExtResource("14_b8mkp")
stream_5/volume = 0.0
stream_6/stream = ExtResource("15_asdmd")
stream_6/volume = 0.0

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_rofdm"]
clip_count = 7
clip_0/name = &"Mountain Chords Synth"
clip_0/stream = ExtResource("9_k8yap")
clip_0/auto_advance = 0
clip_1/name = &"Mountain Melody Synth"
clip_1/stream = ExtResource("10_w6u34")
clip_1/auto_advance = 0
clip_2/name = &"Mountain Melody Var Synth"
clip_2/stream = ExtResource("11_e8qec")
clip_2/auto_advance = 0
clip_3/name = &"Mountain Melody Var Vocal"
clip_3/stream = ExtResource("12_ndra6")
clip_3/auto_advance = 0
clip_4/name = &"Mountain Melody Vocal"
clip_4/stream = ExtResource("13_66pi5")
clip_4/auto_advance = 0
clip_5/name = &"Mountain Percusion"
clip_5/stream = ExtResource("14_b8mkp")
clip_5/auto_advance = 0
clip_6/name = &"Mountain Sub"
clip_6/stream = ExtResource("15_asdmd")
clip_6/auto_advance = 0
_transitions = {
Vector2i(-1, -1): {
"fade_beats": 1,
"fade_mode": 4,
"from_time": 0,
"to_time": 0
}
}

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_i3k5c")

[node name="Background" type="Node2D" parent="."]

[node name="Playerground" type="Node2D" parent="."]

[node name="Hand" parent="Playerground" instance=ExtResource("1_5g20p")]
unique_name_in_owner = true
position = Vector2(606, -26)

[node name="Foreground" type="Node2D" parent="."]
position = Vector2(0, -2)

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_4v8we")

[node name="PauseMenu" parent="." instance=ExtResource("2_5i0uf")]

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2

[node name="LabelContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartLabel" type="Label" parent="UI/LabelContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.5
offset_top = -175.0
offset_right = 296.5
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("5_wdl50")
theme_override_font_sizes/font_size = 400
text = "3"
horizontal_alignment = 1

[node name="StartAnimation" type="AnimationPlayer" parent="UI"]
unique_name_in_owner = true
root_node = NodePath("../LabelContainer/StartLabel")
libraries = {
"": SubResource("AnimationLibrary_c823l")
}

[node name="StartTimer" type="Timer" parent="UI"]
unique_name_in_owner = true
wait_time = 1.5
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -266.0
offset_top = 20.0
offset_right = -24.0
offset_bottom = 84.0
grow_horizontal = 0
theme_override_constants/separation = 15

[node name="RestartBtn" type="Button" parent="UI/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_wdl50")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = ExtResource("8_tcnxy")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fq2vb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yh7nq")
theme_override_styles/hover_pressed_mirrored = ExtResource("6_2f0ut")
theme_override_styles/hover_pressed = ExtResource("6_2f0ut")
theme_override_styles/hover_mirrored = ExtResource("6_2f0ut")
theme_override_styles/hover = ExtResource("6_2f0ut")
theme_override_styles/pressed_mirrored = ExtResource("7_hdnrq")
theme_override_styles/pressed = ExtResource("7_hdnrq")
theme_override_styles/normal_mirrored = ExtResource("6_2f0ut")
theme_override_styles/normal = ExtResource("8_tcnxy")
disabled = true
text = " Restart "

[node name="ReturnToMapBtn" type="Button" parent="UI/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_icons/icon = SubResource("ImageTexture_2ty43")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iw6md")
theme_override_styles/hover = SubResource("StyleBoxTexture_mu7fx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wjsoj")
theme_override_styles/normal = SubResource("StyleBoxTexture_5gfpd")
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = SubResource("AudioStreamSynchronized_mami6")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = SubResource("AudioStreamInteractive_rofdm")

[connection signal="timeout" from="UI/StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="pressed" from="UI/HBoxContainer/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/ReturnToMapBtn" to="." method="_on_return_to_map_btn_pressed"]
